messages MVC complete

--- a/views/messages.hbs
+++ b/views/messages.hbs
@@ -1,3 +1,6 @@
+{{! the data, title and friend, we are passing it through the messages.controller.js while rendering this view }}
+
+<h1>{{title}}</h1>
 <ul>
   <li>Hello {{friend}}!</li>
   <li>What are your thoughts on black holes?</li>
