--- a/views/messages.hbs
+++ b/views/messages.hbs
@@ -1,4 +1,5 @@
 {{! the data, title and friend, we are passing it through the messages.controller.js while rendering this view }}
+{{! we are rendering this view through messages.controller.js }}
 
 <h1>{{title}}</h1>
 <ul>
